@@ -481,3 +481,157 @@ genxAddAttribute( a, value )
   POSTCALL:
       croak_on_genx_error( NULL, RETVAL );
 
+MODULE = XML::Genx	PACKAGE = XML::Genx::Constants
+
+# It would really be very good indeed to get these automatically generated...
+genxStatus
+GENX_SUCCESS()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_SUCCESS;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_BAD_UTF8()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_BAD_UTF8;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_NON_XML_CHARACTER()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_NON_XML_CHARACTER;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_BAD_NAME()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_BAD_NAME;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_ALLOC_FAILED()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_ALLOC_FAILED;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_BAD_NAMESPACE_NAME()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_BAD_NAMESPACE_NAME;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_INTERNAL_ERROR()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_INTERNAL_ERROR;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_DUPLICATE_PREFIX()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_DUPLICATE_PREFIX;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_SEQUENCE_ERROR()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_SEQUENCE_ERROR;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_NO_START_TAG()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_NO_START_TAG;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_IO_ERROR()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_IO_ERROR;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_MISSING_VALUE()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_MISSING_VALUE;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_MALFORMED_COMMENT()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_MALFORMED_COMMENT;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_XML_PI_TARGET()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_XML_PI_TARGET;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_MALFORMED_PI()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_MALFORMED_PI;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_DUPLICATE_ATTRIBUTE()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_DUPLICATE_ATTRIBUTE;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_ATTRIBUTE_IN_DEFAULT_NAMESPACE()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_ATTRIBUTE_IN_DEFAULT_NAMESPACE;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_DUPLICATE_NAMESPACE()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_DUPLICATE_NAMESPACE;
+  OUTPUT:
+    RETVAL
+
+genxStatus
+GENX_BAD_DEFAULT_DECLARATION()
+  PROTOTYPE:
+  CODE:
+    RETVAL = GENX_BAD_DEFAULT_DECLARATION;
+  OUTPUT:
+    RETVAL
